--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,8 @@
 
 		android:alpha="0"
 
+		android:translationX="20dp"
+
 		android:src="@drawable/ic_arrow_back_24"
 
 		app:layout_constraintStart_toStartOf="@id/toolbar"
@@ -67,6 +69,7 @@
 		android:id="@+id/tbTitle"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
+
 		android:text="Order Manually"
 		android:textSize="@dimen/tv_order_manually_text_size"
 
@@ -83,6 +86,7 @@
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:clickable="false"
+
 		android:text="Pizza"
 		android:textColor="@android:color/black"
 		android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
@@ -255,10 +259,11 @@
 			android:layout_width="64dp"
 			android:layout_height="64dp"
 
-			app:backgroundTint="@color/btn_size_selected"
+			app:backgroundTint="@color/btn_toppings_selected"
 			app:icon="@drawable/ic_mushroom_24"
 			app:iconSize="32dp"
 			app:iconTintMode="multiply"
+			app:rippleColor="@color/btn_ripple"
 
 			style="@style/My.Widget.Button.IconOnly.Rounded"
 			/>
@@ -267,11 +272,13 @@
 			android:id="@+id/btnAddTomato"
 			android:layout_width="64dp"
 			android:layout_height="64dp"
+			android:layout_marginStart="4dp"
 
-			app:backgroundTint="@color/btn_size_selected"
+			app:backgroundTint="@color/btn_toppings_selected"
 			app:icon="@drawable/ic_tomato_24"
 			app:iconSize="32dp"
 			app:iconTintMode="multiply"
+			app:rippleColor="@color/btn_ripple"
 
 			style="@style/My.Widget.Button.IconOnly.Rounded"
 			/>
@@ -280,11 +287,13 @@
 			android:id="@+id/btnAddBacon"
 			android:layout_width="64dp"
 			android:layout_height="64dp"
+			android:layout_marginStart="4dp"
 
-			app:backgroundTint="@color/btn_size_selected"
+			app:backgroundTint="@color/btn_toppings_selected"
 			app:icon="@drawable/ic_bacon_24"
 			app:iconSize="32dp"
 			app:iconTintMode="multiply"
+			app:rippleColor="@color/btn_ripple"
 
 			style="@style/My.Widget.Button.IconOnly.Rounded"
 			/>
@@ -293,11 +302,13 @@
 			android:id="@+id/btnAddCheese"
 			android:layout_width="64dp"
 			android:layout_height="64dp"
+			android:layout_marginStart="4dp"
 
-			app:backgroundTint="@color/btn_size_selected"
+			app:backgroundTint="@color/btn_toppings_selected"
 			app:icon="@drawable/ic_cheese_24"
 			app:iconSize="32dp"
 			app:iconTintMode="multiply"
+			app:rippleColor="@color/btn_ripple"
 
 			style="@style/My.Widget.Button.IconOnly.Rounded"
 			/>
@@ -306,11 +317,13 @@
 			android:id="@+id/btnAddChili"
 			android:layout_width="64dp"
 			android:layout_height="64dp"
+			android:layout_marginStart="4dp"
 
-			app:backgroundTint="@color/btn_size_selected"
+			app:backgroundTint="@color/btn_toppings_selected"
 			app:icon="@drawable/ic_chili_pepper_24"
 			app:iconSize="32dp"
 			app:iconTintMode="multiply"
+			app:rippleColor="@color/btn_ripple"
 			style="@style/My.Widget.Button.IconOnly.Rounded"
 			/>
 
@@ -332,8 +345,6 @@
 
 		android:contentDescription="@null"
 		/>
-
-
 
 
 
