--- a/app/src/main/res/xml/carousel_scene.xml
+++ b/app/src/main/res/xml/carousel_scene.xml
@@ -514,9 +514,9 @@
 		<Constraint android:id="@+id/pizzaViewsBounds"
 			android:layout_width="@dimen/pizzaPlateSize"
 			android:layout_height="@dimen/pizzaPlateSize"
-			android:layout_marginTop="24dp"
+			android:layout_marginTop="16dp"
 
-			app:layout_constraintTop_toBottomOf="@id/pizzaName"
+			app:layout_constraintTop_toBottomOf="@id/toolbar"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 
@@ -533,7 +533,6 @@
 			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
 			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
 			/>
-
 
 		<!-- pizza name -->
 		<Constraint android:id="@+id/pizzaName"
