--- a/app/src/main/res/drawable/btn_add_to_cart_gradient_bg.xml
+++ b/app/src/main/res/drawable/btn_add_to_cart_gradient_bg.xml
@@ -8,8 +8,8 @@
 
 	<gradient
 		android:angle="270"
-		android:startColor="#FFD54F"
-		android:endColor="#E65100"
+		android:startColor="#FFD285"
+		android:endColor="#F7603A"
 		android:type="linear"
 		/>
 
