--- a/app/src/main/res/drawable/table_bg_round.xml
+++ b/app/src/main/res/drawable/table_bg_round.xml
@@ -2,70 +2,54 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
 	<!-- Drop Shadow Stack -->
-	<item>
-		<shape>
-			<padding
-				android:top="1dp"
-				android:right="1dp"
-				android:bottom="1dp"
-				android:left="1dp"/>
-			<corners android:radius="124dp" />
-			<solid android:color="#00CCCCCC"/>
-		</shape>
-	</item>
+
 	<item>
 		<shape>
 			<padding
 
-				android:top="1dp"
-				android:right="1dp"
 				android:bottom="1dp"
-				android:left="1dp"/>
-			<corners android:radius="123dp" />
-			<solid android:color="#10CCCCCC"/>
-		</shape>
-	</item>
-	<item>
-		<shape>
-			<padding
-				android:top="1dp"
-				android:right="1dp"
-				android:bottom="1dp"
-				android:left="1dp"/>
+				/>
 			<corners android:radius="122dp" />
 			<solid android:color="#20CCCCCC"/>
 		</shape>
 	</item>
 	<item>
 		<shape>
-			<padding
-				android:top="1dp"
-				android:right="1dp"
-				android:bottom="1dp"
-				android:left="1dp"/>
-			<corners android:radius="121dp" />
+			<padding android:bottom="1dp" />
+			<corners android:radius="123dp" />
 			<solid android:color="#30CCCCCC"/>
 		</shape>
 	</item>
 	<item>
 		<shape>
-			<padding
+			<padding android:bottom="1dp" />
+			<corners android:radius="124dp" />
+			<solid android:color="#00CCCCCC"/>
+		</shape>
+	</item>
+
+	<item>
+		<shape>
+			<padding android:bottom="1dp"
 				android:top="1dp"
 				android:right="1dp"
-				android:bottom="1dp"
 				android:left="1dp"/>
-			<corners android:radius="120dp" />
-			<solid android:color="#50CCCCCC"/>
+			<corners android:radius="125dp"/>
+			<gradient
+				android:angle="270"
+				android:startColor="#FFFFFF"
+				android:centerX="0.2"
+				android:centerColor="#FFFFFF"
+				android:endColor="#CCC"
+				android:type="linear" />
 		</shape>
 	</item>
 
 	<item>
 
 		<shape android:shape="rectangle">
-			<stroke android:color="#CCC" android:width="1dp"/>
 			<solid android:color="#FFF" />
 			<corners android:radius="125dp"/>
-
 		</shape>
 
 	</item>
