--- a/app/src/main/res/layout/cart_with_badge.xml
+++ b/app/src/main/res/layout/cart_with_badge.xml
@@ -30,6 +30,7 @@
 		android:textColor="@android:color/white"
 		android:text="0"
 		android:textSize="10sp"
+		android:visibility="invisible"
 		/>
 
 </FrameLayout>
